--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "server": "json-server --watch db/db.json --port 8000",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -12,7 +13,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "uuidv4": "^6.2.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
@@ -26,6 +28,7 @@
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.1.0",
+    "json-server": "^0.16.1",
     "prettier": "^2.0.5",
     "vue-jest": "^3.0.4"
   }
