--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "nuxt": "^2.14.0",
-    "uuidv4": "^6.2.3"
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
