--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "nuxt": "^2.14.0",
+    "nuxt-webfontloader": "^1.1.0",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
