--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
-    "dayjs": "^1.8.35",
     "nuxt": "^2.14.0",
     "nuxt-webfontloader": "^1.1.0",
     "uuid": "^8.3.0"
@@ -22,6 +21,7 @@
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
+    "@testing-library/jest-dom": "^5.11.4",
     "@vue/test-utils": "^1.0.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
